# fancy-board

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults.esp32s3
main/: CMakeLists.txt  Kconfig.projbuild  dashboard_main.c  lcd_config.h  lvgl_demo_ui.c  rgb_lcd_example_main.c
main/lvgl/: lvgl_setup.c  lvgl_setup.h  serial_data_handler.c  serial_data_handler.h  simple_ui.c  simple_ui.h  system_monitor_ui.c  system_monitor_ui.h
main/serial/: serial_data_handler.c  serial_data_handler.h
main/smart/: ha_api.c  ha_api.h  ha_sync.c  ha_sync.h  ha_task_manager.c  ha_task_manager.h  home_assistant_api.c  home_assistant_api.h  smart_config_template.h  smart_home.c  smart_home.h
main/touch/: gt911_touch.c  gt911_touch.h
main/wifi/: wifi_config_example.h  wifi_config_template.h  wifi_manager.c  wifi_manager.h
